--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,14 @@
 		1st place at Combined PC Demo Compo, <br/>
 		SESSIONS in C4 LAN 2023 SPRING
 	</p>
-	<a href="./decompress_of_empty.html" target="_blank" rel="noopener noreferrer">LIVE DEMO</a>
+	<ul>
+		<li>
+			<a href="./decompress_of_empty.html" target="_blank" rel="noopener noreferrer">💻Live Demo</a>
+		</li>
+		<li>
+			<a href="https://www.youtube.com/watch?v=_-0d7B9RNxw" target="_blank" rel="noopener noreferrer">📼YouTube</a>
+		</li>
+	</ul>
+	<small>&copy; 2023 ukonpower</small>
 </body>
 </html>
