--- a/pages/index.html
+++ b/pages/index.html
@@ -11,6 +11,9 @@
 		background-color: #000;
 		color: #fff;
 	}
+	a {
+		color: #c20;
+	}
 </style>
 <body>
 	<h1>Decompress of Empty</h1>
@@ -26,6 +29,9 @@
 		</li>
 		<li>
 			<a href="https://www.youtube.com/watch?v=_-0d7B9RNxw" target="_blank" rel="noopener noreferrer">📼YouTube</a>
+		</li>
+		<li>
+			<a href="https://www.pouet.net/prod.php?which=94325" target="_blank" rel="noopener noreferrer">❤pouet</a>
 		</li>
 		<li>
 			<a href="https://github.com/ukonpower/Decompress_of_Empty" target="_blank" rel="noopener noreferrer">🔧GitHub</a>
